# velodb-demos

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
docs/: TIMEZONE.md
doris/conf/: be.conf  fe.conf
doris/init/: 01-databases.sql  02-tables.sql  03-materialized-views.sql
grafana/: grafana.ini
grafana/dashboards/: logs.json  metrics.json  traces.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: doris.yaml
grafana/provisioning/plugins/: doris-app.yaml
iggy/: .gitignore
iggy/bench/: README.md
iggy/bench/iggy-kafka-bench/: Cargo.toml  README.md
iggy/bench/iggy-kafka-bench/src/: broker.rs  event.rs  main.rs
iggy/bench/shardscope/: Cargo.toml
iggy/bench/shardscope/src/: main.rs
iggy/infra/bench-pulumi/: .gitignore  Pulumi.bench.yaml  Pulumi.yaml  README.md  index.ts  package.json  (+1 more)
images/backend/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum
images/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
images/grafana-image/: Dockerfile
images/rag-api/: Dockerfile  requirements.txt
images/telemetry-generator/: Dockerfile
otel/: otelcol-config.yaml
otel/definitions/: log-definition.yaml  metric-definition.yaml  resource-definition.yaml  target-rest.yaml  trace-definition.yaml
postgres/: 01-init-schema.sql  02-ttl-cleanup.sql
rag/init/: 01-schema.sql  02-mvs.sql
scripts/: backfill-otel-partitions.sh  build-and-push.sh  docker-login.sh  doris-bootstrap.sh  otel-partition-init.py  rag-bootstrap.py  rag-load.py
(+145 files in other folders)
